fix letter and word spacing

--- a/client/sidebar.css
+++ b/client/sidebar.css
@@ -327,6 +327,7 @@ th {
 
 .status-hours b {
   letter-spacing: -0.5px;
+  word-spacing: 0.5px;
 }
 
 .status-icon-row {
